# ida-headless-mcp

./: .gitignore  README.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
skills/: README.md
skills/ida-cli/: SKILL.md
src/ida_pro_mcp/: backend_state.py  cli.py  idalib_bootstrap.py  idalib_pool_manager.py  idalib_pool_server.py  idalib_server.py  mcp_client.py  thin_server.py
src/ida_pro_mcp/ida_mcp/: compat.py
src/ida_pro_mcp/ida_mcp/zeromcp/: jsonrpc.py  mcp.py
tests/: test_idalib_pool_windows_transport.py  test_mcp_http_sse_regressions.py
