[project]
name = "ida-pro-mcp"
version = "2.1.2"
description = "Vibe reversing with IDA Pro"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "mrexodia" },
    { name = "can1357" },
    { name = "IDA Pro MCP Contributors" },
]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "idapro>=0.0.7",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
]

[project.urls]
Repository = "https://github.com/mrexodia/ida-pro-mcp"
Issues = "https://github.com/mrexodia/ida-pro-mcp/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundle the static IDAPython reference docs into the wheel so `use_help`
# can point at them after a plain `pip install`.
"ida_pro_mcp" = ["skills/**/*.md", "skills/**/*.rst"]

[project.scripts]
# Public entry points (new thin-MCP + CLI architecture)
ida-mcp = "ida_pro_mcp.thin_server:main"        # thin MCP: open_session/close_session/use_help
ida-cli = "ida_pro_mcp.cli:main"                # full reverse-engineering CLI (shares the backend)
# Internal / backend entry points (reused as the shared persistent backend)
idalib-pool = "ida_pro_mcp.idalib_pool_server:main"
idalib-mcp = "ida_pro_mcp.idalib_server:main"
# Other entry points
ida-pro-mcp = "ida_pro_mcp.server:main"
ida-mcp-test = "ida_pro_mcp.test:main"

[tool.pyright]
include = ["src/ida_pro_mcp"]

[tool.ruff]
exclude = ["src/ida_pro_mcp/ida_mcp/zeromcp/*.py"]

[tool.coverage.run]
relative_files = true
include = ["src/ida_pro_mcp/*"]
omit = [
    "src/ida_pro_mcp/ida_mcp/tests/*",
    "src/ida_pro_mcp/ida_mcp/zeromcp/*",
]
